# axum_htmx

./: Cargo.toml
src/: lib.rs  main.rs
src/routes/: mod.rs  practice_routes.rs  route_controller.rs
templates/: about.html  home.html  layout.html
templates/partials/: footer.html  header.html  post.html
