[package]
name = "axum_htmx"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
tower-http = { version = "0.6.4", features = ["cors"] }
validator = { version = "0.20.0", features = ["derive"] }
